Altered right-margin to prevent right overflow

--- a/portal/css/msd.css
+++ b/portal/css/msd.css
@@ -125,7 +125,7 @@ color:#303030;
 } 
 .caption-text-content{
    padding-top: 5px;
-   padding-right: 20px;
+   padding-right: 30px;
    overflow: hidden;
 }
 
